--- a/QLNS/FormQLNS.resx
+++ b/QLNS/FormQLNS.resx
@@ -395,7 +395,7 @@
   <metadata name="ColTC_NamXuatBan.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="buttonTrangChu.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAARpJREFUSEvt
         0j9KA0EUx/FBCyWFxNJOEIKVnYF0NhICuYJeQfEEXsEjWAa8gJ2tEhGsLGIKG0HstFAR9Tsyu7yZ/Smz
